# nlp-pie-taggers

./: .gitignore  .noserc  .travis.yml  CHANGES.md  CITATION.CFF  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
pie_extended/: __main__.py  eval.py  tagger.py
pie_extended/cli/: __init__.py  main.py  sub.py  utils.py
pie_extended/models/: __init__.py
pie_extended/models/dum/: __init__.py  imports.py
pie_extended/models/fr/: __init__.py  excluders.py  get.py  imports.py  processor.py  tokenizer.py
pie_extended/models/freem/: __init__.py  imports.py
pie_extended/models/frm/: __init__.py  imports.py
pie_extended/models/fro/: __init__.py  classes.py  get.py  imports.py  processor.py  tokenizer.py
pie_extended/models/grc/: __init__.py  imports.py  processor.py  tokenizer.py
pie_extended/models/hy_hye/: __init__.py
pie_extended/models/hy_hyw/: __init__.py  imports.py
pie_extended/models/hy_xcl/: __init__.py
pie_extended/models/lasla/: __init__.py  _params.py  classes.py  consts.py  get.py  imports.py  processor.py  tokenizer.py
pie_extended/models/occ_cont/: __init__.py  imports.py  tokenizer.py
pie_extended/pipeline/: __init__.py
pie_extended/pipeline/disambiguators/: autocat.py  proto.py
pie_extended/pipeline/formatters/: glue.py  (+1 more)
pie_extended/testing_utils/: __init__.py
pie_extended/utils/: __init__.py  eval.py  hashcheck.py
tests/: test_tokenizer.py
tests/test_checksum/: checksums.csv
tests/test_models/: crazy_text_file-pie.txt  crazy_text_file.txt  test_fr.py  test_fro.py  test_lasla.py
(+13 files in other folders)
